refactor(openclaw): use JDK8-compatible control flow for multi-branch sync
Replace switch expressions and Map.of in invoker mapper tests so cherry-picks compile on 2.3.x/2.7.x lines.

Co-authored-by: Cursor <cursoragent@cursor.com>